# updown

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Ising_Metropolis_MC.py  LICENSE  README.md  ising_metropolis_mc.py  pyproject.toml  run.py  setup.cfg  tox.ini
.github/workflows/: pre-commit.yml  test.yml
tests/: __init__.py  test_properties.py
updown/: __init__.py  initialize.py  mc.py  properties.py  types.py  visualize.py
