[tool.poetry]
name = "updown"
version = "0.0.1"
description = "Fast Monte Carlo simulation of the Ising model written in Python"
authors = ["Ryther Anderson"]
readme = "README.md"
repository = "https://github.com/rytheranderson/updown"
include = [
    "README.md",
    "pyproject.toml",
]
packages = [
  {include = "updown"}
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
numba = ">=0.59.0rc1"
matplotlib = "^3.8.3"
nptyping = "^2.5.0"

[tool.poetry.group.dev.dependencies]
cruft = "^2.15.0"
hypothesis = "^6.100.2"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.2"
tbump = "^6.11.0"
toml = "^0.10.2"
tox = "^3.28.0"
tox-gh-actions = "^2.12.0"
tox-poetry-installer = "^0.10.3"

[tool.ruff.lint]
# B = flake8-bugbear
# C9 = mccabe complexity
# E = pycodestyle error
# F = pyflakes
# N = pep8-naming
# PL = pylint
# Q = flake8-quotes
# RUF = ruf
# W = pycodestyle warning
select = ["B", "C9", "D", "E", "F", "N", "PL", "Q", "RUF", "W"]
ignore = ["N806"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tbump.version]
current = "0.0.1"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'current = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "updown/__init__.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
